# exec-logger

./: Cargo.toml  Makefile  execsnoop  execsnoop.py
.ci/scripts/: bcc_check.py  check_bcc.py
src/: error.rs  exec_logger.rs  execsnoop.c  lib.rs  logging.rs  main.rs  output.rs
src/bpf/: exec_logger.c  execsnoop.c  mod.rs
src/output/: json_lines.rs  mod.rs  table.rs  table_output.rs
tests/: cli_output_tests.rs
tests/lit/: five_seconds_run.output  help.output
