[package]
name = "exec-logger"
version = "0.1.0"
authors = ["Lukas Pustina <lukas@pustina.de>"]
description = "Log all executed programs"
edition = "2018"

[[bin]]
name = "exec_logger"
path = "src/main.rs"

[lib]
name = "exec_logger"
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bcc = "0.0.24"
byteorder = "1.3"
ctrlc = { version = "3.1", features = ["termination"] }
env_logger = "0.7"
libc = "0.2"
log = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
structopt = "0.3"
thiserror = "1"
